--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "supabase:generate": "supabase gen types typescript --project-id fjtlgxifyqlwwpxzgsyd --schema public > src/types/database.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.16",
@@ -41,18 +42,23 @@
     "framer-motion": "^12.23.12",
     "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
+    "mammoth": "^1.11.0",
     "motion": "^12.23.12",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "ollama-ai-provider-v2": "^1.1.1",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "resend": "^6.0.1",
+    "mammoth": "^1.8.0",
+    "pdf-parse": "^1.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
