[FEAT] Line charts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bio",
   "version": "0.1.0",
   "private": true,
-  "description": "Institutional-grade biomedical research AI chatbot with access to PubMed, clinical trials, FDA drug labels, and Python code execution",
+  "description": "Enterprise-grade biomedical research AI chatbot with access to PubMed, clinical trials, FDA drug labels, and Python code execution",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
