--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Provides all biomedical data: PubMed articles, clinical trials, FDA drug labels,
 # and other specialized medical databases
 # Get your API key at: https://platform.valyu.ai
-VALYU_API_KEY=valyu_your_api_key_here
-
+VALYU_API_KEY=your_valyu_api_key_here
 # ------------------------------------------------------------------------------
 # OPENAI API (REQUIRED)
 # ------------------------------------------------------------------------------
@@ -93,8 +92,8 @@ NEXT_PUBLIC_ENTERPRISE=false
 # ------------------------------------------------------------------------------
 # PostHog for analytics and feature flags
 # Get these from: https://posthog.com
-NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
-NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
+NEXT_PUBLIC_POSTHOG_KEY=phc_your_posthog_key_here
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
 # ------------------------------------------------------------------------------
 # EXAMPLE CONFIGURATIONS
