--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 # APP CONFIGURATION
 # ------------------------------------------------------------------------------
 # Set to 'development' or 'production'
-# development = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
+# development = no auth, local SQLite, unlimited queries
 # production = full auth, Supabase, billing, rate limits
 NEXT_PUBLIC_APP_MODE=development
 
@@ -38,18 +38,6 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 DAYTONA_API_KEY=your_daytona_api_key_here
 DAYTONA_API_URL=https://api.daytona.io
 DAYTONA_TARGET=latest
-
-# ------------------------------------------------------------------------------
-# LOCAL LLM CONFIGURATION (OPTIONAL - Development Mode Only)
-# ------------------------------------------------------------------------------
-# Use Ollama or LM Studio for unlimited, private local AI queries
-# Only used when NEXT_PUBLIC_APP_MODE=development
-
-# Ollama Configuration (https://ollama.com)
-OLLAMA_BASE_URL=http://localhost:11434
-
-# LM Studio Configuration (https://lmstudio.ai)
-LMSTUDIO_BASE_URL=http://localhost:1234
 
 # ------------------------------------------------------------------------------
 # SUPABASE (REQUIRED FOR PRODUCTION)
@@ -103,8 +91,7 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # NEXT_PUBLIC_APP_MODE=development
 # VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
-# OPENAI_API_KEY=sk-xxx (optional, for fallback)
-# OLLAMA_BASE_URL=http://localhost:11434 (optional)
+# OPENAI_API_KEY=sk-xxx
 
 # Production Mode (Full Setup - Auth + Billing):
 # NEXT_PUBLIC_APP_MODE=production
