--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -29,7 +30,6 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
-    "@sparticuz/chromium": "^141.0.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -41,6 +41,7 @@
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "drizzle-kit": "^0.31.6",
     "drizzle-orm": "^0.44.7",
     "embla-carousel-react": "^8.6.0",
@@ -51,10 +52,10 @@
     "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.6",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.290.0",
-    "puppeteer": "^24.29.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
