[FEAT] Sign in with Valyu

--- a/.env.example
+++ b/.env.example
@@ -10,17 +10,36 @@
 # ------------------------------------------------------------------------------
 # Set to 'development' or 'production'
 # development = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
-# production = full auth, Supabase, billing, rate limits
+# production = full auth (Sign in with Valyu), Supabase, rate limits
 NEXT_PUBLIC_APP_MODE=development
 
 # Your app URL (use http://localhost:3000 for local development)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ------------------------------------------------------------------------------
-# VALYU API (REQUIRED)
+# VALYU OAUTH CONFIGURATION (REQUIRED FOR PRODUCTION)
 # ------------------------------------------------------------------------------
-# Provides all biomedical data: PubMed articles, clinical trials, FDA drug labels,
-# and other specialized medical databases
+# "Sign in with Valyu" OAuth 2.1 authentication
+# Users authenticate via Valyu Platform and use their organization's credits
+# Get OAuth credentials from: https://platform.valyu.ai → Settings → OAuth Apps
+
+# Valyu Platform's Supabase URL (OAuth provider)
+NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
+
+# OAuth Client ID (public)
+NEXT_PUBLIC_VALYU_CLIENT_ID=your_oauth_client_id_here
+
+# OAuth Client Secret (KEEP SECRET - server-side only)
+VALYU_CLIENT_SECRET=your_oauth_client_secret_here
+
+# Valyu Platform URL (for userinfo, OAuth proxy)
+VALYU_APP_URL=https://platform.valyu.ai
+
+# ------------------------------------------------------------------------------
+# VALYU API (OPTIONAL - Fallback for Development)
+# ------------------------------------------------------------------------------
+# Server API key for development mode when users aren't authenticated
+# In production, API calls go through Valyu OAuth proxy using user's org credits
 # Get your API key at: https://platform.valyu.ai
 VALYU_API_KEY=valyu_your_api_key_here
 
@@ -34,7 +53,7 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 # ------------------------------------------------------------------------------
 # DAYTONA API (REQUIRED)
 # ------------------------------------------------------------------------------
-# Used for secure Python code execution (statistical analysis, pharmacokinetic modeling, data visualization)
+# Used for secure Python code execution (statistical analysis, pharmacokinetic modeling)
 # Get your API key at: https://daytona.io
 DAYTONA_API_KEY=your_daytona_api_key_here
 DAYTONA_API_URL=https://api.daytona.io
@@ -53,9 +72,10 @@ OLLAMA_BASE_URL=http://localhost:11434
 LMSTUDIO_BASE_URL=http://localhost:1234
 
 # ------------------------------------------------------------------------------
-# SUPABASE (REQUIRED FOR PRODUCTION)
+# APP'S OWN SUPABASE (REQUIRED FOR PRODUCTION)
 # ------------------------------------------------------------------------------
-# Only needed when NEXT_PUBLIC_APP_MODE=production
+# Your app's Supabase database for chat history, user data, etc.
+# Separate from Valyu Platform's Supabase (which handles OAuth)
 # Get these from: https://supabase.com → Project Settings → API
 
 # Your Supabase project URL
@@ -66,21 +86,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
 # Supabase service role key (KEEP SECRET - never expose client-side)
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
-
-# ------------------------------------------------------------------------------
-# POLAR BILLING (OPTIONAL - Production Mode Only)
-# ------------------------------------------------------------------------------
-# Only needed if you want subscription billing
-# Get these from: https://polar.sh
-
-# Webhook secret for verifying Polar webhook signatures
-POLAR_WEBHOOK_SECRET=whsec_your_webhook_secret_here
-
-# Product ID for your unlimited subscription tier
-POLAR_UNLIMITED_PRODUCT_ID=prod_your_product_id_here
-
-# Skip webhook verification in development (set to 'true' only for local testing)
-POLAR_SKIP_WEBHOOK_VERIFICATION=false
 
 # ------------------------------------------------------------------------------
 # ENTERPRISE FEATURES (OPTIONAL)
@@ -100,21 +105,31 @@ NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
 # EXAMPLE CONFIGURATIONS
 # ------------------------------------------------------------------------------
 
-# Development Mode (Easy Setup - No Auth, No Billing):
+# Development Mode (Easy Setup - No Auth):
 # NEXT_PUBLIC_APP_MODE=development
 # VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
 # OPENAI_API_KEY=sk-xxx (optional, for fallback)
 # OLLAMA_BASE_URL=http://localhost:11434 (optional)
 
-# Production Mode (Full Setup - Auth + Billing):
+# Production Mode (Full Setup - Sign in with Valyu):
 # NEXT_PUBLIC_APP_MODE=production
 # NEXT_PUBLIC_APP_URL=https://yourdomain.com
+#
+# # Valyu OAuth
+# NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
+# NEXT_PUBLIC_VALYU_CLIENT_ID=your_client_id
+# VALYU_CLIENT_SECRET=your_client_secret
+# VALYU_APP_URL=https://platform.valyu.ai
+#
+# # Valyu API (optional fallback)
 # VALYU_API_KEY=valyu_xxx
+#
+# # AI Models
 # OPENAI_API_KEY=sk-xxx
 # DAYTONA_API_KEY=xxx
+#
+# # App's Supabase (for data storage)
 # NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 # SUPABASE_SERVICE_ROLE_KEY=xxx
-# POLAR_WEBHOOK_SECRET=whsec_xxx
-# POLAR_UNLIMITED_PRODUCT_ID=prod_xxx
