--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-    "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.4.8",
@@ -54,11 +53,9 @@
     "react": "19.1.2",
     "react-dom": "19.1.2",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1",
     "resend": "^6.0.1",
+    "streamdown": "^1.6.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
