added anthropic provider

--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,23 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Get your API key at: https://platform.valyu.ai
 VALYU_API_KEY=your_valyu_api_key_here
 # ------------------------------------------------------------------------------
-# OPENAI API (REQUIRED)
+# MODEL PROVIDER CONFIGURATION
 # ------------------------------------------------------------------------------
-# Used for AI chat responses and natural language understanding
+# Choose between "anthropic" and "openai"
+# Defaults to "anthropic" if not specified
+MODEL_PROVIDER=anthropic
+
+# ------------------------------------------------------------------------------
+# ANTHROPIC API (REQUIRED WHEN MODEL_PROVIDER=anthropic)
+# ------------------------------------------------------------------------------
+# Used for Claude AI models (Sonnet, Opus, Haiku)
+# Get your API key at: https://console.anthropic.com
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# ------------------------------------------------------------------------------
+# OPENAI API (REQUIRED WHEN MODEL_PROVIDER=openai)
+# ------------------------------------------------------------------------------
+# Used for GPT models when MODEL_PROVIDER=openai
 # Get your API key at: https://platform.openai.com
 OPENAI_API_KEY=sk-your_openai_api_key_here
 
@@ -87,17 +101,39 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # EXAMPLE CONFIGURATIONS
 # ------------------------------------------------------------------------------
 
-# Development Mode (Easy Setup - No Auth, No Billing):
+# Development Mode with Anthropic (Recommended - Easy Setup):
 # NEXT_PUBLIC_APP_MODE=development
+# MODEL_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=sk-ant-xxx
 # VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
-# OPENAI_API_KEY=sk-xxx
 
-# Production Mode (Full Setup - Auth + Billing):
+# Development Mode with OpenAI (Alternative):
+# NEXT_PUBLIC_APP_MODE=development
+# MODEL_PROVIDER=openai
+# OPENAI_API_KEY=sk-xxx
+# VALYU_API_KEY=valyu_xxx
+# DAYTONA_API_KEY=xxx
+
+# Production Mode with Anthropic (Full Setup - Auth + Billing):
 # NEXT_PUBLIC_APP_MODE=production
 # NEXT_PUBLIC_APP_URL=https://yourdomain.com
+# MODEL_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=sk-ant-xxx
 # VALYU_API_KEY=valyu_xxx
+# DAYTONA_API_KEY=xxx
+# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
+# SUPABASE_SERVICE_ROLE_KEY=xxx
+# POLAR_WEBHOOK_SECRET=whsec_xxx
+# POLAR_UNLIMITED_PRODUCT_ID=prod_xxx
+
+# Production Mode with OpenAI (Alternative):
+# NEXT_PUBLIC_APP_MODE=production
+# NEXT_PUBLIC_APP_URL=https://yourdomain.com
+# MODEL_PROVIDER=openai
 # OPENAI_API_KEY=sk-xxx
+# VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
 # NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
