--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ VALYU_API_KEY=your_valyu_api_key_here
 # ------------------------------------------------------------------------------
 # MODEL PROVIDER CONFIGURATION
 # ------------------------------------------------------------------------------
-# Choose between "anthropic" and "openai"
+# Choose between "anthropic", "openai", and "qwen"
 # Defaults to "anthropic" if not specified
 MODEL_PROVIDER=anthropic
 
@@ -43,6 +43,13 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # Used for GPT models when MODEL_PROVIDER=openai
 # Get your API key at: https://platform.openai.com
 OPENAI_API_KEY=sk-your_openai_api_key_here
+
+# ------------------------------------------------------------------------------
+# AI GATEWAY (REQUIRED WHEN MODEL_PROVIDER=qwen)
+# ------------------------------------------------------------------------------
+# Used for accessing models via Vercel AI Gateway (Qwen3 Coder and other models)
+# Get your API key at: https://vercel.com/docs/ai-gateway
+AI_GATEWAY_API_KEY=your_ai_gateway_api_key_here
 
 # ------------------------------------------------------------------------------
 # DAYTONA API (REQUIRED)
@@ -115,6 +122,13 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
 
+# Development Mode with Qwen (Alternative):
+# NEXT_PUBLIC_APP_MODE=development
+# MODEL_PROVIDER=qwen
+# AI_GATEWAY_API_KEY=vck_xxx
+# VALYU_API_KEY=valyu_xxx
+# DAYTONA_API_KEY=xxx
+
 # Production Mode with Anthropic (Full Setup - Auth + Billing):
 # NEXT_PUBLIC_APP_MODE=production
 # NEXT_PUBLIC_APP_URL=https://yourdomain.com
@@ -140,3 +154,17 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # SUPABASE_SERVICE_ROLE_KEY=xxx
 # POLAR_WEBHOOK_SECRET=whsec_xxx
 # POLAR_UNLIMITED_PRODUCT_ID=prod_xxx
+
+# Production Mode with Qwen (Alternative):
+# NEXT_PUBLIC_APP_MODE=production
+# NEXT_PUBLIC_APP_URL=https://yourdomain.com
+# MODEL_PROVIDER=qwen
+# AI_GATEWAY_API_KEY=vck_xxx
+# VALYU_API_KEY=valyu_xxx
+# DAYTONA_API_KEY=xxx
+# NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
+# SUPABASE_SERVICE_ROLE_KEY=xxx
+# POLAR_WEBHOOK_SECRET=whsec_xxx
+# POLAR_UNLIMITED_PRODUCT_ID=prod_xxx
+# POLAR_ACCESS_TOKEN=polar_xxx  # For pay-per-use billing tracking
