--- a/.env.example
+++ b/.env.example
@@ -52,13 +52,12 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 AI_GATEWAY_API_KEY=your_ai_gateway_api_key_here
 
 # ------------------------------------------------------------------------------
-# DAYTONA API (REQUIRED)
+# E2B API (REQUIRED)
 # ------------------------------------------------------------------------------
 # Used for secure Python code execution (statistical analysis, pharmacokinetic modeling, data visualization)
-# Get your API key at: https://daytona.io
-DAYTONA_API_KEY=your_daytona_api_key_here
-DAYTONA_API_URL=https://api.daytona.io
-DAYTONA_TARGET=latest
+# Sessions persist across multiple code executions within the same chat
+# Get your API key at: https://e2b.dev
+E2B_API_KEY=your_e2b_api_key_here
 
 # ------------------------------------------------------------------------------
 # SUPABASE (REQUIRED FOR PRODUCTION)
@@ -113,21 +112,21 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # MODEL_PROVIDER=anthropic
 # ANTHROPIC_API_KEY=sk-ant-xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 
 # Development Mode with OpenAI (Alternative):
 # NEXT_PUBLIC_APP_MODE=development
 # MODEL_PROVIDER=openai
 # OPENAI_API_KEY=sk-xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 
 # Development Mode with Qwen (Alternative):
 # NEXT_PUBLIC_APP_MODE=development
 # MODEL_PROVIDER=qwen
 # AI_GATEWAY_API_KEY=vck_xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 
 # Production Mode with Anthropic (Full Setup - Auth + Billing):
 # NEXT_PUBLIC_APP_MODE=production
@@ -135,7 +134,7 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # MODEL_PROVIDER=anthropic
 # ANTHROPIC_API_KEY=sk-ant-xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 # NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 # SUPABASE_SERVICE_ROLE_KEY=xxx
@@ -148,7 +147,7 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # MODEL_PROVIDER=openai
 # OPENAI_API_KEY=sk-xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 # NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 # SUPABASE_SERVICE_ROLE_KEY=xxx
@@ -161,7 +160,7 @@ NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 # MODEL_PROVIDER=qwen
 # AI_GATEWAY_API_KEY=vck_xxx
 # VALYU_API_KEY=valyu_xxx
-# DAYTONA_API_KEY=xxx
+# E2B_API_KEY=xxx
 # NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 # SUPABASE_SERVICE_ROLE_KEY=xxx
