--- a/.env.example
+++ b/.env.example
@@ -8,45 +8,25 @@
 # ------------------------------------------------------------------------------
 # APP CONFIGURATION
 # ------------------------------------------------------------------------------
-# Set to 'development' or 'production'
-# development = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
-# production = full auth (Sign in with Valyu), Supabase, rate limits
-NEXT_PUBLIC_APP_MODE=development
+# Set to 'self-hosted' or 'valyu'
+# self-hosted = no auth, local SQLite, unlimited queries, Ollama/LM Studio support
+# valyu = full auth (Sign in with Valyu), Supabase, rate limits
+NEXT_PUBLIC_APP_MODE=self-hosted
 
 # Your app URL (use http://localhost:3000 for local development)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ------------------------------------------------------------------------------
-# VALYU OAUTH CONFIGURATION (REQUIRED FOR PRODUCTION)
+# VALYU API (REQUIRED)
 # ------------------------------------------------------------------------------
-# "Sign in with Valyu" OAuth 2.1 authentication
-# Users authenticate via Valyu Platform and use their organization's credits
-# Get OAuth credentials from: https://platform.valyu.ai → Settings → OAuth Apps
-
-# Valyu Platform's Supabase URL (OAuth provider)
-NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
-
-# OAuth Client ID (public)
-NEXT_PUBLIC_VALYU_CLIENT_ID=your_oauth_client_id_here
-
-# OAuth Client Secret (KEEP SECRET - server-side only)
-VALYU_CLIENT_SECRET=your_oauth_client_secret_here
-
-# Valyu Platform URL (for userinfo, OAuth proxy)
-VALYU_APP_URL=https://platform.valyu.ai
-
-# ------------------------------------------------------------------------------
-# VALYU API (OPTIONAL - Fallback for Development)
-# ------------------------------------------------------------------------------
-# Server API key for development mode when users aren't authenticated
-# In production, API calls go through Valyu OAuth proxy using user's org credits
+# Server API key for self-hosted mode
 # Get your API key at: https://platform.valyu.ai
 VALYU_API_KEY=valyu_your_api_key_here
 
 # ------------------------------------------------------------------------------
-# OPENAI API (REQUIRED)
+# OPENAI API (OPTIONAL - Fallback for Self-Hosted)
 # ------------------------------------------------------------------------------
-# Used for AI chat responses and natural language understanding
+# Used as fallback for AI chat responses when local models are unavailable
 # Get your API key at: https://platform.openai.com
 OPENAI_API_KEY=sk-your_openai_api_key_here
 
@@ -60,10 +40,10 @@ DAYTONA_API_URL=https://api.daytona.io
 DAYTONA_TARGET=latest
 
 # ------------------------------------------------------------------------------
-# LOCAL LLM CONFIGURATION (OPTIONAL - Development Mode Only)
+# LOCAL LLM CONFIGURATION (RECOMMENDED - Self-Hosted Mode)
 # ------------------------------------------------------------------------------
 # Use Ollama or LM Studio for unlimited, private local AI queries
-# Only used when NEXT_PUBLIC_APP_MODE=development
+# Only used when NEXT_PUBLIC_APP_MODE=self-hosted
 
 # Ollama Configuration (https://ollama.com)
 OLLAMA_BASE_URL=http://localhost:11434
@@ -72,20 +52,43 @@ OLLAMA_BASE_URL=http://localhost:11434
 LMSTUDIO_BASE_URL=http://localhost:1234
 
 # ------------------------------------------------------------------------------
-# APP'S OWN SUPABASE (REQUIRED FOR PRODUCTION)
+# VALYU OAUTH CONFIGURATION (VALYU MODE ONLY)
+# ------------------------------------------------------------------------------
+# NOTE: Valyu OAuth apps will be in general availability soon.
+# Currently client id/secret are not publicly available.
+# Contact contact@valyu.ai if you need access.
+#
+# "Sign in with Valyu" OAuth 2.1 authentication
+# Users authenticate via Valyu Platform and use their organization's credits
+# Get OAuth credentials from: https://platform.valyu.ai -> Settings -> OAuth Apps
+
+# Valyu Platform's Supabase URL (OAuth provider)
+# NEXT_PUBLIC_VALYU_SUPABASE_URL=https://xxx.supabase.co
+
+# OAuth Client ID (public)
+# NEXT_PUBLIC_VALYU_CLIENT_ID=your_oauth_client_id_here
+
+# OAuth Client Secret (KEEP SECRET - server-side only)
+# VALYU_CLIENT_SECRET=your_oauth_client_secret_here
+
+# Valyu Platform URL (for userinfo, OAuth proxy)
+# VALYU_APP_URL=https://platform.valyu.ai
+
+# ------------------------------------------------------------------------------
+# APP'S OWN SUPABASE (VALYU MODE ONLY)
 # ------------------------------------------------------------------------------
 # Your app's Supabase database for chat history, user data, etc.
 # Separate from Valyu Platform's Supabase (which handles OAuth)
-# Get these from: https://supabase.com → Project Settings → API
+# Get these from: https://supabase.com -> Project Settings -> API
 
 # Your Supabase project URL
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 
 # Supabase anonymous (public) key
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
 # Supabase service role key (KEEP SECRET - never expose client-side)
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # ------------------------------------------------------------------------------
 # ENTERPRISE FEATURES (OPTIONAL)
@@ -98,22 +101,22 @@ NEXT_PUBLIC_ENTERPRISE=false
 # ------------------------------------------------------------------------------
 # PostHog for analytics and feature flags
 # Get these from: https://posthog.com
-NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
-NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
+# NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
+# NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
 
 # ------------------------------------------------------------------------------
 # EXAMPLE CONFIGURATIONS
 # ------------------------------------------------------------------------------
 
-# Development Mode (Easy Setup - No Auth):
-# NEXT_PUBLIC_APP_MODE=development
+# Self-Hosted Mode (Recommended - Easy Setup):
+# NEXT_PUBLIC_APP_MODE=self-hosted
 # VALYU_API_KEY=valyu_xxx
 # DAYTONA_API_KEY=xxx
 # OPENAI_API_KEY=sk-xxx (optional, for fallback)
 # OLLAMA_BASE_URL=http://localhost:11434 (optional)
 
-# Production Mode (Full Setup - Sign in with Valyu):
-# NEXT_PUBLIC_APP_MODE=production
+# Valyu Mode (OAuth Coming Soon - Contact contact@valyu.ai):
+# NEXT_PUBLIC_APP_MODE=valyu
 # NEXT_PUBLIC_APP_URL=https://yourdomain.com
 #
 # # Valyu OAuth
